= ActiveMerchant CHANGELOG

== Version 1.7.2 (August 27, 2010)

* Update Braintree integration to play nicely with the braintree 2.5.0 gem [Soleone]
* Fix SagePay to not send fractional amounts for Chinese YEN currency [Soleone]

== Version 1.7.1 (July 28, 2010)

* Pull in only the necessary components of Active Support. Enables use of ActiveMerchant with Rails 3 [railsjedi]

== Version 1.7.0 (July 9, 2010)

* Add support for new Braintree Blue Gateway (using the braintree gem) [Braintree]

== Version 1.6.0 (July 6, 2010)

* Add a task rake gateways:hosts to get a list of all outbound hosts and ports [cody]
* Fix test failure in chronopay helper in Ruby 1.9.1 [cody]
* Fix timezone issue in credit card test. [cody]
* Fix failing unit test for Garanti gateway [cody]
* Fix failing CyberSource remote test [Patrick Joyce]
* Support for Garanti Sanal Pos: Turkish bank and billing gateway [Selem Delul]
* Add deprecation note for Money objects to Bogus gateway [Soleone]
* Updated test URL for Merchant eSolutions and added valid remote test credentials [Soleone]
* Add new error class for SSL certificate problems in connection class  [Soleone]
* Update valid_month and valid_expiry_year to coerce string arguments to integers [cody]
* Add support for displaying credit cards with PayPal Express. Use the :allow_guest_checkout => true option when setting up the transaction [Edward Ocampo-Gooding]
* Use card_brand method for checking for checks in Sage and Beanstream [cody]
* Add JCB and Diners Club to LinkPoint [Soleone]

== Version 1.5.1 (February 14, 2010)

* Cleanup Rakefile, add gemspec and prepare for 1.5.1 release [cody]
* Update copyright dates [cody]
* Work around SkipJack bug by reversing the order of the query params [Soleone]
* Fix uppercase character in autoload of 2Checkout's Notification class [Edward Ocampo-Gooding]
* Detect language used in Chronopay integration based on billing address country [Soleone]